--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,18 +4,17 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
+    "noEmit": true,
+    "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "baseUrl": "."
   },
-  "include": ["src", "/*.ts", "/.tsx", "src/**/*"]
+  "include": ["src", "**/*.ts", "**/*.tsx", "src/**/*"],
+  "exclude": ["node_modules"]
 }
