✨ feat: add filter item

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -82,6 +82,7 @@
     "no-unused-vars": "off",
     "react/no-array-index-key": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "function-paren-newline": "off"
+    "function-paren-newline": "off",
+    "indent": "off"
   }
 }
